--- a/index.html
+++ b/index.html
@@ -8,61 +8,78 @@
 </head>
 <body>
     <header id="inicio">
-        <h1>Energía Solar y Eólica en Chiquimula</h1>
+        <h1>Energía Solar y Eólica</h1>
         <nav>
             <ul>
                 <li><a href="#presentacion">Presentación</a></li>
                 <li><a href="#videos">Videos Explicativos</a></li>
                 <li><a href="#recursos">Recursos Naturales</a></li>
                 <li><a href="#beneficios">Beneficios Sociales</a></li>
+                <li><a href="#" onclick="abrirContacto(); return false;">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="presentacion">
-        <h2>Presentación</h2>
-        <img src="imágenes/chiquimula.jpg" alt="Paisaje de Chiquimula">
-        <p>Chiquimula, un departamento de la Región 6 de Guatemala, cuenta con un enorme potencial para el desarrollo de energías renovables. Con su clima soleado y zonas elevadas ideales para la energía eólica, es un lugar clave para promover un futuro energético limpio y sostenible.</p>
+    <h2>Presentación</h2>
+    <div class="presentacion-contenido">
+        <div class="texto">
+            <p>El departamento del Cesar, ubicado en el norte de Colombia, cuenta con un enorme potencial para el desarrollo de energías renovables. Gracias a su alta radiación solar y zonas con excelente régimen de vientos, especialmente en áreas como la Serranía del Perijá, se posiciona como un territorio clave para impulsar un futuro energético limpio y sostenible. Estas condiciones naturales ofrecen una oportunidad estratégica para diversificar la matriz energética del país, promover el desarrollo regional y avanzar hacia una transición energética basada en fuentes limpias y amigables con el medio ambiente.</p>
+        </div>
+        <div class="imagen">
+            <img src="img/presentacion.gif" alt="Paisaje">
+        </div>
+    </div>
     </section>
+
 
     <section id="videos">
         <h2>Videos Educativos</h2>
         <p>Aquí puedes ver algunos videos que explican cómo funciona la energía solar y eólica, y cómo benefician a nuestras comunidades en La Guajira.</p>
 
         <div class="video-container">
-            <h3>¿Qué es la energía solar?</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/tz2dEjxt1-s" title="Energía Solar Explicación" frameborder="0" allowfullscreen></iframe>
+        <h3>¿Qué es la energía solar?</h3>
+        <div class="video-responsive">
+        <iframe src="https://www.youtube.com/embed/5cVpl1WGmJA?si=EW-y0XO0nAB5N-BS"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
         </div>
+        </div>
+
 
         <div class="video-container">
         <h3>¿Qué es la energía eólica?</h3>
-        <iframe width="560" height="315" src="https://youtu.be/5cVpl1WGmJA?si=yQWbeLYIalI8Ud0V" title="Energía Eólica Explicación" frameborder="0" allowfullscreen></iframe>
+        <div class="video-responsive">
+        <iframe src="https://www.youtube.com/embed/Ext_rwcbE7g?si=fOlNXCelhRnm9ypR" 
+                title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
         </div>
-
-        <div class="video-container">
-        <h3>Proyectos en La Guajira</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Iu6KHnoNbbM" title="Energía renovable en La Guajira" frameborder="0" allowfullscreen></iframe>
         </div>
-        <a href="#inicio" class="volver-btn">⬅ Volver al inicio</a>
     </section>
 
     <section id="recursos">
         <h2>Recursos Naturales</h2>
-        <img src="imágenes/solar.jpg" alt="Paneles solares">
+        <img src="img/panel.jpg" alt="Paneles solares">
         <p><strong>Solar:</strong> Con más de 300 días de sol al año, Chiquimula es ideal para instalar sistemas de energía solar fotovoltaica, tanto residenciales como comerciales.</p>
-        <img src="imágenes/eolico.jpg" alt="Turbinas eólicas">
+        <img src="img/eolica.jfif" alt="Turbinas eólicas">
         <p><strong>Eólico:</strong> Las zonas montañosas del departamento presentan condiciones favorables para la energía eólica, con vientos constantes y velocidades adecuadas para turbinas de generación.</p>
         <a href="#inicio" class="volver-btn">⬅ Volver al inicio</a>
     </section>
 
     <section id="beneficios">
         <h2>Beneficios Sociales</h2>
-        <p>La implementación de energías renovables en Chiquimula traerá múltiples beneficios sociales:</p>
+        <p>La adopción de energías renovables en el departamento del Cesar ofrece importantes ventajas para sus comunidades y el desarrollo regional:</p>
         <ul>
-            <li>Reducción de costos en energía para comunidades rurales.</li>
-            <li>Generación de empleos verdes en instalación y mantenimiento.</li>
-            <li>Educación ambiental y tecnológica para jóvenes.</li>
-            <li>Mejora en la calidad del aire y salud pública.</li>
+            <li><strong> Acceso energético en zonas rurales:</strong> Llevar energía limpia a corregimientos y veredas que no cuentan con un suministro eléctrico constante.</li>
+            <li><strong> Reducción de costos a largo plazo:</strong> Disminución en las facturas de energía para hogares, instituciones educativas y pequeños negocios.</li>
+            <li><strong> Generación de empleo local:</strong> Oportunidades de trabajo en instalación, operación y mantenimiento de sistemas solares y eólicos, fortaleciendo la economía regional..</li>
+            <li><strong> Formación y capacitación:</strong> Programas de educación técnica y ambiental para jóvenes, impulsando una nueva generación de profesionales en energías limpias.</li>
+            <li><strong> calidad de vida y salud pública:</strong> Menor dependencia de combustibles fósiles, reducción de la contaminación del aire y del ruido.</li>
+            <li><strong>Impulso al turismo sostenible:</strong> Proyectos que integren energías renovables en fincas, eco-hoteles y atractivos turísticos del Cesar.</li>
         </ul>
         <a href="#inicio" class="volver-btn">⬅ Volver al inicio</a>
     </section>
@@ -70,6 +87,17 @@
     <footer>
         <p>© 2025 Energía Limpia Chiquimula | Desarrollado con fines educativos</p>
     </footer>
+
+    <script>
+    function abrirContacto() {
+        window.open(
+            "contacto.html", // archivo del formulario
+            "ventanaContacto",
+            "width=500,height=500,top=100,left=100,resizable=yes,scrollbars=yes"
+        );
+    }
+    </script>
+
 </body>
 </html>
 
