Adicion de caracteristicas

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Solar Service SAS</title>
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="inicio">
-        <h1>Energía Solar y Eólica</h1>
+        <h1>Energía Solar limpia, infinita y para todos</h1>
         <nav>
             <ul>
-                <li><a href="#presentacion">Presentación</a></li>
-                <li><a href="#videos">Videos Explicativos</a></li>
+                <li><a href="#presentacion">Presentación</a></li>         
                 <li><a href="#recursos">Recursos Naturales</a></li>
                 <li><a href="#beneficios">Beneficios Sociales</a></li>
-                <li><a href="#" onclick="abrirContacto(); return false;">Contacto</a></li>
+                <li><a href="#videos">Videos Educativos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -32,6 +32,28 @@
     </div>
     </section>
 
+    <section id="recursos">
+        <h2>Recursos Naturales</h2>
+        <img src="img/panel.jpg" alt="Paneles solares">
+        <p><strong>Solar:</strong> Con más de 300 días de sol al año, Chiquimula es ideal para instalar sistemas de energía solar fotovoltaica, tanto residenciales como comerciales.</p>
+        <img src="img/eolica.jfif" alt="Turbinas eólicas">
+        <p><strong>Eólico:</strong> Las zonas montañosas del departamento presentan condiciones favorables para la energía eólica, con vientos constantes y velocidades adecuadas para turbinas de generación.</p>
+        <a href="#inicio" class="volver-btn">⬅ Volver al inicio</a>
+    </section>
+
+    <section id="beneficios">
+        <h2>Beneficios Sociales</h2>
+        <p>La adopción de energías renovables en el departamento del Cesar ofrece importantes ventajas para sus comunidades y el desarrollo regional:</p>
+        <ul>
+            <li><strong> Acceso energético en zonas rurales:</strong> Llevar energía limpia a corregimientos y veredas que no cuentan con un suministro eléctrico constante.</li>
+            <li><strong> Reducción de costos a largo plazo:</strong> Disminución en las facturas de energía para hogares, instituciones educativas y pequeños negocios.</li>
+            <li><strong> Generación de empleo local:</strong> Oportunidades de trabajo en instalación, operación y mantenimiento de sistemas solares y eólicos, fortaleciendo la economía regional..</li>
+            <li><strong> Formación y capacitación:</strong> Programas de educación técnica y ambiental para jóvenes, impulsando una nueva generación de profesionales en energías limpias.</li>
+            <li><strong> calidad de vida y salud pública:</strong> Menor dependencia de combustibles fósiles, reducción de la contaminación del aire y del ruido.</li>
+            <li><strong>Impulso al turismo sostenible:</strong> Proyectos que integren energías renovables en fincas, eco-hoteles y atractivos turísticos del Cesar.</li>
+        </ul>
+        <a href="#inicio" class="volver-btn">⬅ Volver al inicio</a>
+    </section>
 
     <section id="videos">
         <h2>Videos Educativos</h2>
@@ -59,29 +81,6 @@
         </iframe>
         </div>
         </div>
-    </section>
-
-    <section id="recursos">
-        <h2>Recursos Naturales</h2>
-        <img src="img/panel.jpg" alt="Paneles solares">
-        <p><strong>Solar:</strong> Con más de 300 días de sol al año, Chiquimula es ideal para instalar sistemas de energía solar fotovoltaica, tanto residenciales como comerciales.</p>
-        <img src="img/eolica.jfif" alt="Turbinas eólicas">
-        <p><strong>Eólico:</strong> Las zonas montañosas del departamento presentan condiciones favorables para la energía eólica, con vientos constantes y velocidades adecuadas para turbinas de generación.</p>
-        <a href="#inicio" class="volver-btn">⬅ Volver al inicio</a>
-    </section>
-
-    <section id="beneficios">
-        <h2>Beneficios Sociales</h2>
-        <p>La adopción de energías renovables en el departamento del Cesar ofrece importantes ventajas para sus comunidades y el desarrollo regional:</p>
-        <ul>
-            <li><strong> Acceso energético en zonas rurales:</strong> Llevar energía limpia a corregimientos y veredas que no cuentan con un suministro eléctrico constante.</li>
-            <li><strong> Reducción de costos a largo plazo:</strong> Disminución en las facturas de energía para hogares, instituciones educativas y pequeños negocios.</li>
-            <li><strong> Generación de empleo local:</strong> Oportunidades de trabajo en instalación, operación y mantenimiento de sistemas solares y eólicos, fortaleciendo la economía regional..</li>
-            <li><strong> Formación y capacitación:</strong> Programas de educación técnica y ambiental para jóvenes, impulsando una nueva generación de profesionales en energías limpias.</li>
-            <li><strong> calidad de vida y salud pública:</strong> Menor dependencia de combustibles fósiles, reducción de la contaminación del aire y del ruido.</li>
-            <li><strong>Impulso al turismo sostenible:</strong> Proyectos que integren energías renovables en fincas, eco-hoteles y atractivos turísticos del Cesar.</li>
-        </ul>
-        <a href="#inicio" class="volver-btn">⬅ Volver al inicio</a>
     </section>
 
     <footer>
