--- a/contacto.html
+++ b/contacto.html
@@ -4,44 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Contacto</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-        }
-        h2 {
-            color: #0073e6;
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-        }
-        label {
-            font-weight: bold;
-        }
-        input, textarea, button {
-            padding: 8px;
-            font-size: 14px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        button {
-            background: #0073e6;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background: #005bb5;
-        }
-    </style>
+    <link rel="stylesheet" href="contacto.css">
 </head>
 <body>
-
+    
 <h2>Formulario de Contacto</h2>
 
-<form action="#" method="POST">
+<form action="https://formspree.io/f/xpwlpeqd" method="POST" id="contact-form">
     <label for="nombre">Nombre y Apellido *</label>
     <input type="text" id="nombre" name="nombre" required>
 
