Segunda adicion de caracteristicas

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2>Presentación</h2>
     <div class="presentacion-contenido">
         <div class="texto">
-            <p>El departamento del Cesar, ubicado en el norte de Colombia, cuenta con un enorme potencial para el desarrollo de energías renovables. Gracias a su alta radiación solar y zonas con excelente régimen de vientos, especialmente en áreas como la Serranía del Perijá, se posiciona como un territorio clave para impulsar un futuro energético limpio y sostenible. Estas condiciones naturales ofrecen una oportunidad estratégica para diversificar la matriz energética del país, promover el desarrollo regional y avanzar hacia una transición energética basada en fuentes limpias y amigables con el medio ambiente.</p>
+            <p>El desarrollo de energías renovables en el Cesar impulsa la creación de empleos, mejora la economía local y fortalece la estabilidad del suministro eléctrico. Además, fomenta la formación técnica y promueve un desarrollo sostenible que beneficia a las comunidades y protege el medio ambiente.</p>
         </div>
         <div class="imagen">
             <img src="img/presentacion.gif" alt="Paisaje">
@@ -35,9 +35,9 @@
     <section id="recursos">
         <h2>Recursos Naturales</h2>
         <img src="img/panel.jpg" alt="Paneles solares">
-        <p><strong>Solar:</strong> Con más de 300 días de sol al año, Chiquimula es ideal para instalar sistemas de energía solar fotovoltaica, tanto residenciales como comerciales.</p>
+        <p><strong>Solar:</strong> El desarrollo de energías renovables en el Cesar, gracias a sus abundantes recursos solares, impulsa la creación de empleos, mejora la economía local y fortalece la estabilidad del suministro eléctrico. Además, fomenta la formación técnica y promueve un desarrollo sostenible que beneficia a las comunidades y protege el medio ambiente.</p>
         <img src="img/eolica.jfif" alt="Turbinas eólicas">
-        <p><strong>Eólico:</strong> Las zonas montañosas del departamento presentan condiciones favorables para la energía eólica, con vientos constantes y velocidades adecuadas para turbinas de generación.</p>
+        <p><strong>Eólico:</strong> El desarrollo de energía eólica en el Cesar, aprovechando sus excelentes condiciones de viento, impulsa la creación de empleos, mejora la economía local y fortalece la estabilidad del suministro eléctrico. Además, fomenta la formación técnica y promueve un desarrollo sostenible que beneficia a las comunidades y protege el medio ambiente.</p>
         <a href="#inicio" class="volver-btn">⬅ Volver al inicio</a>
     </section>
 
@@ -45,19 +45,19 @@
         <h2>Beneficios Sociales</h2>
         <p>La adopción de energías renovables en el departamento del Cesar ofrece importantes ventajas para sus comunidades y el desarrollo regional:</p>
         <ul>
+            <li><strong> Generación de empleo local:</strong> Oportunidades de trabajo en instalación, operación y mantenimiento de sistemas solares y eólicos, fortaleciendo la economía regional..</li>
+            <li><strong>Impulso al turismo sostenible:</strong> Proyectos que integren energías renovables en fincas, eco-hoteles y atractivos turísticos del Cesar.</li>
             <li><strong> Acceso energético en zonas rurales:</strong> Llevar energía limpia a corregimientos y veredas que no cuentan con un suministro eléctrico constante.</li>
             <li><strong> Reducción de costos a largo plazo:</strong> Disminución en las facturas de energía para hogares, instituciones educativas y pequeños negocios.</li>
-            <li><strong> Generación de empleo local:</strong> Oportunidades de trabajo en instalación, operación y mantenimiento de sistemas solares y eólicos, fortaleciendo la economía regional..</li>
             <li><strong> Formación y capacitación:</strong> Programas de educación técnica y ambiental para jóvenes, impulsando una nueva generación de profesionales en energías limpias.</li>
             <li><strong> calidad de vida y salud pública:</strong> Menor dependencia de combustibles fósiles, reducción de la contaminación del aire y del ruido.</li>
-            <li><strong>Impulso al turismo sostenible:</strong> Proyectos que integren energías renovables en fincas, eco-hoteles y atractivos turísticos del Cesar.</li>
         </ul>
         <a href="#inicio" class="volver-btn">⬅ Volver al inicio</a>
     </section>
 
     <section id="videos">
         <h2>Videos Educativos</h2>
-        <p>Aquí puedes ver algunos videos que explican cómo funciona la energía solar y eólica, y cómo benefician a nuestras comunidades en La Guajira.</p>
+        <p>Aquí puedes ver algunos videos explicativos sobre cómo funciona la energía solar y eólica, y los beneficios que aportan a las comunidades.</p>
 
         <div class="video-container">
         <h3>¿Qué es la energía solar?</h3>
@@ -81,10 +81,11 @@
         </iframe>
         </div>
         </div>
+        <a href="#inicio" class="volver-btn">⬅ Volver al inicio</a>
     </section>
 
     <footer>
-        <p>© 2025 Energía Limpia Chiquimula | Desarrollado con fines educativos</p>
+        <p>© 2025 Energía Limpia en el Cesar | Desarrollado con fines educativos</p>
     </footer>
 
     <script>
