--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="contacto.css">
 </head>
 <body>
-    
+
 <h2>Formulario de Contacto</h2>
 
 <form action="https://formspree.io/f/xpwlpeqd" method="POST" id="contact-form">
@@ -24,6 +24,7 @@
     <textarea id="mensaje" name="mensaje" rows="4"></textarea>
 
     <button type="submit">Enviar</button>
+    <a href="index.html" class="volver-btn">⬅ Volver al inicio</a>
 </form>
 
 </body>
